--- a/gobotany/static/sass/_home.scss
+++ b/gobotany/static/sass/_home.scss
@@ -118,7 +118,7 @@
             color: #807121;
         }
         p {
-            margin: 0 inherit;
+            margin: 0;
         }
         a.learn-more {
             margin: 13px 0 0 0;	
