Show the future Invite to Group buttons as disabled for now. (#452)

--- a/gobotany/plantshare/templates/find_people.html
+++ b/gobotany/plantshare/templates/find_people.html
@@ -58,7 +58,7 @@
                         </li>
                     {% endif %}
                 </ul>
-                <p><a href="#" class="invite-group-btn">Invite to
+                <p><a href="#" class="orange-button caps disabled">Invite to
                     Group</a></p>
             </li>
         {% endfor %}
