--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -923,7 +923,7 @@ body.plantshare {
                     margin: 0;
                 }
             }
-            .map-thumbnail {
+            #location-map {
                 float: left;
                 margin: 0 15px 0 0;
                 padding: 0;
