--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1047,6 +1047,90 @@ body.plantshare {
         margin: 20px 0;
         padding: 10px 0;
     }
+    .image-modal {
+        background-color: white;
+        border: 5px solid #ACAC90;
+        display: none;
+        padding: 15px;
+        position: absolute;
+        width: 400px;
+        height: 160px;
+        z-index: 10;
+
+        img {
+            float: left;
+            margin: 0 20px 10px 0;
+            max-height: 84px;
+            max-width: 84px;
+        }
+
+        a.button {
+            @extend .orange-button;
+            display: inline-block;
+            color: white;
+            margin: 10px 0;
+        }
+
+        a.disabled {
+            display: none;
+        }
+
+        div.modal-footer {
+            display: block;
+            position: relative;
+            float: left;
+            width: 100%;
+            color: #888;
+
+            div.file-path {
+                margin: 2px 0 auto;
+                border: 1px solid #888;
+                padding: 2px;
+                color: #888;
+            }
+        }
+
+        a.close {
+            background: transparent url(/static/images/icons/close.png) no-repeat;
+            display: block;
+            height: 16px;
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            width: 16px;
+            text-indent: -9999px;
+        }
+
+        h4 {
+            margin: 0 0 5px;
+            font-size: 18px;
+        }
+
+        form {
+            float: right;
+            margin: 0;
+            width: 290px;
+        }
+        
+        input {
+            border: 0 none !important;
+            box-shadow: inset 0 0 0 white !important;
+        }
+
+        input#id_image {
+            clear: both;
+            display: block;
+            margin: 0 0 10px;
+        }
+
+        div.screening-notify p {
+          margin: 5px 0;
+          font-size: 10px;
+          color: #888;
+        }
+
+    }
+
     div#form-template {
         display: none;
     }
@@ -1090,6 +1174,10 @@ body.plantshare {
         }
         .image {
             width: 80px; 
+            img.checklist-thumb {
+                max-width: 40px;
+                max-height: 40px;
+            }
         }
         .date-sighted, .date-posted {
             width: 110px; 
@@ -1207,6 +1295,10 @@ body.plantshare {
             }
             .image {
                 font-size: 0.9em;
+                img.checklist-thumb {
+                    max-width: 40px;
+                    max-height: 40px;
+                }
             }
             .date-sighted input {
                 width: 70px;
