Add the ability to set visibility for a sighting. (#439)

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -53,6 +53,11 @@
             {% endif %}
         </div>
 
+        <div class="visibility">
+            <p>Who can see this sighting?</p>
+            <p>{{ form.visibility }}</p>
+        </div>
+
         {# TODO: buttons: disable until input is ready to submit #}
         {#                add class 'inactive' for disabled look #}
         {% if edit %}
