--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1173,11 +1173,13 @@ body.plantshare #sightings-locator.mini .box form p#sightings-status { margin-le
 body.plantshare #sightings-locator.mini .box form p.full-link { margin-top: 10px; }
 body.plantshare #sightings-locator.mini .box .map { clear: none; border-bottom: 0; border-right: 0; border-top: 0; float: right; margin-top: 0; }
 body.plantshare#new-sighting h1 + div { background: #fff; border: 1px solid #c3d941; margin-bottom: 16px; padding: 5px 16px; }
-body.plantshare#new-sighting .thumb-gallery, body.plantshare#edit-sighting .thumb-gallery { margin-bottom: 28px; }
+body.plantshare#new-sighting .thumb-gallery, body.plantshare#edit-sighting .thumb-gallery { margin-bottom: 20px; }
 body.plantshare#new-sighting .thumb-gallery .thumb-frame, body.plantshare#edit-sighting .thumb-gallery .thumb-frame { display: inline-block; margin: 0 5px; vertical-align: bottom; }
 body.plantshare#new-sighting .thumb-gallery .thumb-frame .thumb, body.plantshare#edit-sighting .thumb-gallery .thumb-frame .thumb { vertical-align: bottom; }
 body.plantshare#new-sighting .thumb-gallery .thumb-frame .delete-link, body.plantshare#edit-sighting .thumb-gallery .thumb-frame .delete-link { width: 100%; text-align: center; margin: 2px 0; padding-top: 2px; }
 body.plantshare#new-sighting .thumb-gallery .thumb-frame .delete-link img, body.plantshare#edit-sighting .thumb-gallery .thumb-frame .delete-link img { vertical-align: middle; margin-right: 4px; }
+body.plantshare#new-sighting .visibility, body.plantshare#edit-sighting .visibility { margin-bottom: 60px; }
+body.plantshare#new-sighting .visibility select, body.plantshare#edit-sighting .visibility select { margin: 6px 0 0; }
 body.plantshare#manage-sightings { /* Hide the usual default Shadowbox close button. This is used for some dialogs that have their own interior close button, such as is seen on various PlantShare dialogs. */ }
 body.plantshare#manage-sightings .content table { width: 100%; }
 body.plantshare#manage-sightings .content table th.identification { width: 40%; }
