--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -37,6 +37,7 @@
                         <th class="identification">Identification</th>
                         <th class="location">Location</th>
                         <th class="posted">Date Posted</th>
+                        <th class="visibility">Visibility</th>
                     {% else %}
                         {# There is only one item, so omit filter boxes. #}
                         <th></th>
@@ -53,6 +54,7 @@
                     <td>{{ sighting.identification|italicize_if_scientific|safe }}</td>
                     <td>{{ sighting.location }}</td>
                     <td>{{ sighting.created }}</td>
+                    <td>{{ sighting.visibility }}</td>
                     <td class="action">
                         <a href="{% url 'ps-edit-sighting' sighting.id %}">Edit</a>
                     </td>
