--- a/gobotany/plantshare/templates/new_checklist.html
+++ b/gobotany/plantshare/templates/new_checklist.html
@@ -3,6 +3,10 @@
 
 {% block title %}Checklists: PlantShare{% endblock %}
 
+{% block more_meta_link %}
+<link rel="stylesheet" href="/static/css/smoothness/jquery-ui-1.9.2.custom.min.css" />
+{% endblock %}
+
 {% block js_require %}
     require([
         'util/suggester_init', 
